fix: grid-gap

--- a/src/assets/style/Settings/_variables.scss
+++ b/src/assets/style/Settings/_variables.scss
@@ -1,3 +1,3 @@
 // grid
 
-$grid-gap: 30px !default;
+$grid-gap: 2rem !default;
